--- a/index.html
+++ b/index.html
@@ -5,20 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="css/st.css">
+    <link rel="stylesheet" href="css/index style.css">
 </head>
 <body>
-    <h1>hello</h1>
-    <div>
-        <nav>
-            <a href="#a">Home</a>
-            <a href="#a">Home</a>
-            <a href="#a">Home</a>
-            <a href="#a">Home</a>
+    <div class="header">
+
+        <div>
+            <img  id="logo" src="image/The logo.png" alt="logo">
+        </div>
+
+        <div class="nav-parent">
+         <nav >
+           <button><a class="navbar" href="">Home</a></button>
+           <a class="navbar" href="">Explore</a>
+           <a class="navbar" href="">About</a>
+           <a class="navbar" href="">Log In</a>
         </nav>
-    </div>
-    <div>
-        <iframe src="image/html.pdf" frameborder="0" height="500em"></iframe>
-    </div>
+    </div>   
+        </div>
+    
 </body>
 </html>
