--- a/index.html
+++ b/index.html
@@ -10,16 +10,14 @@
 <body>
     <div class="header">
 
-        <div>
-            <img  id="logo" src="image/The logo.png" alt="logo">
-        </div>
-
-        <div class="nav-parent">
-         <nav >
-           <button><a class="navbar" href="">Home</a></button>
-           <a class="navbar" href="">Explore</a>
-           <a class="navbar" href="">About</a>
-           <a class="navbar" href="">Log In</a>
+        <nav>
+            <img class="logo" src="image/logo 2.png" alt="logo">
+        <ul class="nav-links">
+           <li><a  href="">Home</a></li>
+           <li><a  href="">Home</a></li>
+           <li><a  href="">Home</a></li>
+           <li><a  href="">Home</a></li>
+        </ul>
         </nav>
     </div>   
         </div>
