--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 
     <div class="header">
 
-        <nav>
-        <img class="logo" src="image/logo 2.png" alt="logo">
+        <nav class="nav-header">
+        <img class="logo" src="image/Logo.png" alt="logo">
         <div class="nam"><h1 >WallPics</h1></div>
 <div class="search">
         <form action="" >
@@ -39,11 +39,38 @@
 
     <div class="body-parent">
         <div class="images">
-        <p>hellp</p>
+        
+         <div>   
+            <a href="image/starry sky.jpg"><img src="image/starry sky.jpg" alt="starry sky"></a>
+         </div>
+
+         <div> 
+            <a href="image/red fish.jpg"><img src="image/red fish.jpg" alt=""></a>
+         </div>
+
+         <div> 
+            <a href="image/The tree.jpg"><img src="image/The tree.jpg" alt=""></a>
+         </div>
+
+         <div> 
+            <a href="image/Fantasy bulb.jpg"><img src="image/Fantasy bulb.jpg" alt=""></a>
+         </div>
+
+         <div> 
+            <a href="image/green landscape.jpg"><img src="image/green landscape.jpg" alt=""></a>
+         </div>
+
         </div>
 
         <div class="filter">
-            <button type="submit">filter</button>
+            <button id="filter" type="submit">filter</button>
+            <label for="quality">choose the quality :
+                <select id="quality">
+                 <option value="HD">1080p</option>
+                 <option value="2k">2K</option>
+                 <option value="4k">4K</option>
+                 <option value="8k">8K</option>
+            </label>
         </div>
 
     </div>
