--- a/index.html
+++ b/index.html
@@ -13,23 +13,23 @@
 
     <div class="header">
 
-        <nav class="nav-header">
-        <img class="logo" src="image/Logo.png" alt="logo">
-        <div class="nam"><h1 >WallPics</h1></div>
+        <nav >
+        <img  class="logo" src="image/Logo.png" alt="logo">
+        <h1 class="company-name">WallPics</h1>
 <div class="search">
         <form action="" >
             <input type="text" placeholder="Enter Keyword">
             <button type="submit">Search</button>
         </form>
 </div>
-         <ul class="nav-links">
+        <ul class="nav-links">
            <li><a  href="">Home</a></li>
            <li><a  href="">Explore</a></li>
            <li><a  href="">About</a></li>
            <li><a  href="">Contact</a></li>
            <li class="sign">Sign up</li>
           </ul>
-        
+          
         </nav>   
     </div>
 
