almost final update

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>WallPics - free Wallpaper</title>
     <link rel="stylesheet" href="css/index style.css">
 </head>
 <body>
@@ -61,6 +61,10 @@
          <div> 
             <a href="image/green landscape.jpg"><img src="image/green landscape.jpg" alt=""></a>
          </div>
+          
+         <div> 
+            <a href="image/night city.jpg"><img src="image/night city.jpg" alt=""></a>
+         </div>
 
         </div>
 
@@ -76,10 +80,15 @@
         </div>
 </div>
     
-<footer class="footer">
-    <div class="container">
-        <div class="row">
-            <div class="footer-col">
+<!--footer goes here -->
+
+
+<h1>heloooooooooooooo</h1>
+<h1>heloooooooooooooo</h1>
+<h1>heloooooooooooooo</h1>
+<h1>heloooooooooooooo</h1>
+
+ <!--<div class="footer">
                 <h4>company</h4>
                 <ul>
                     <li><a href="#">about us</a></li>
@@ -87,6 +96,7 @@
                     <li><a href="#">privacy policy</a></li>
                     <li><a href="#">affiliate program</a></li>
                 </ul>
+         <div>
             </div>
             <div class="footer-col">
                 <h4>get help</h4>
@@ -119,6 +129,7 @@
         </div>
     </div>
 </footer>
-
+-->
+   
 </body>
 </html>
