--- a/new.html
+++ b/new.html
@@ -4,10 +4,100 @@
   <title>Footer Design</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="css/new.css">
+  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
 </head>
 <body>
+      
+	<!-- html for header-->
+	   <div class="header">
 
-  <footer class="footer">
+		<div class="logo">
+			<img class="logo" src="image/Logo.png" alt="logo"><h1 >  WallPics</h1>
+		</div>
+
+		<div class="company-name">
+			
+		</div>
+		
+		<div class="search">
+			<form action="" >
+				<input type="text" placeholder="Enter Keyword">
+				<button type="submit">Search</button>
+			</form>
+		</div>
+
+		<div class="nav-links">
+			<ul class="nav-links">
+				<li><a  href="">Home</a></li>
+				<li><a  href="">Explore</a></li>
+				<li><a  href="">About</a></li>
+				<li><a  href="">Contact</a></li>
+				</ul>
+			   
+		</div>
+
+		<div>
+			<ul class="log">
+				<li class="sign">Sign up</li>
+				<li class="log-in">Log In</li>
+			</ul>
+		</div>
+
+
+
+
+
+
+
+
+
+
+
+	   </div>
+
+
+
+<!-- html for body content-->
+ 
+<p class="big_name">Free Pics for Wallpaper</p>
+
+      <div class="body-parent">
+
+		<div class="image-gallery">
+			
+	
+		</div>
+
+		<div class="filter">
+
+		</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+	  </div>
+
+
+
+
+
+
+<!-- html for footer-->
+   <footer class="footer">
   	 <div class="container">
   	 	<div class="row">
   	 		<div class="footer-col">
@@ -27,15 +117,6 @@
   	 				<li><a href="#">returns</a></li>
   	 				<li><a href="#">order status</a></li>
   	 				<li><a href="#">payment options</a></li>
-  	 			</ul>
-  	 		</div>
-  	 		<div class="footer-col">
-  	 			<h4>online shop</h4>
-  	 			<ul>
-  	 				<li><a href="#">watch</a></li>
-  	 				<li><a href="#">bag</a></li>
-  	 				<li><a href="#">shoes</a></li>
-  	 				<li><a href="#">dress</a></li>
   	 			</ul>
   	 		</div>
   	 		<div class="footer-col">
