--- a/new.html
+++ b/new.html
@@ -65,12 +65,41 @@
       <div class="body-parent">
 
 		<div class="image-gallery">
-			
+			<div>   
+				<a href="image/starry sky.jpg"><img src="image/starry sky.jpg" alt="starry sky"></a>
+			 </div>
+	
+			 <div> 
+				<a href="image/red fish.jpg"><img src="image/red fish.jpg" alt=""></a>
+			 </div>
+	
+			 <div> 
+				<a href="image/The tree.jpg"><img src="image/The tree.jpg" alt=""></a>
+			 </div>
+
+			 <div> 
+				<a href="image/Fantasy bulb.jpg"><img src="image/Fantasy bulb.jpg" alt=""></a>
+			 </div>
+	
+			 <div> 
+				<a href="image/green landscape.jpg"><img src="image/green landscape.jpg" alt=""></a>
+			 </div>
+			  
+			 <div> 
+				<a href="image/night city.jpg"><img src="image/night city.jpg" alt=""></a>
+			 </div>
+	
 	
 		</div>
 
 		<div class="filter">
-
+            <button>8k</button>
+			<button>4k</button>
+			<button>2k</button>
+			<button>hd walls</button>
+			<button>walls</button>
+			<button>walls</button>
+			<button>walls</button>
 		</div>
 
 
