--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <title>Footer Design</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="css/new.css">
+  <link rel="stylesheet" href="css/index.css">
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
 </head>
 <body>
@@ -39,22 +39,13 @@
 
 		<div>
 			<ul class="log">
-				<li class="sign">Sign up</li>
+				<a href="html/sign up.html"><li class="sign">Sign up</li></a>
 				<li class="log-in">Log In</li>
 			</ul>
 		</div>
 
 
-
-
-
-
-
-
-
-
-
-	   </div>
+	</div>
 
 
 
@@ -102,25 +93,10 @@
 		</div>
 
 
+</div>
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-	  </div>
-
-
-
+    <a href=""></a>
 
 
 
