--- a/index.html
+++ b/index.html
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Footer Design</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="css/index.css">
-  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="css/home.css">
 </head>
 <body>
-      
-	<!-- html for header-->
-	   <div class="header">
+
+    <div class="header">
 
 		<div class="logo">
 			<img class="logo" src="image/Logo.png" alt="logo"><h1 >  WallPics</h1>
@@ -47,94 +46,18 @@
 
 	</div>
 
-
-
-<!-- html for body content-->
- 
-<p class="big_name">Free Pics for Wallpaper</p>
-
-      <div class="body-parent">
-
-		<div class="image-gallery">
-			<div>   
-				<a href="image/starry sky.jpg"><img src="image/starry sky.jpg" alt="starry sky"></a>
-			 </div>
-	
-			 <div> 
-				<a href="image/red fish.jpg"><img src="image/red fish.jpg" alt=""></a>
-			 </div>
-	
-			 <div> 
-				<a href="image/The tree.jpg"><img src="image/The tree.jpg" alt=""></a>
-			 </div>
-
-			 <div> 
-				<a href="image/Fantasy bulb.jpg"><img src="image/Fantasy bulb.jpg" alt=""></a>
-			 </div>
-	
-			 <div> 
-				<a href="image/green landscape.jpg"><img src="image/green landscape.jpg" alt=""></a>
-			 </div>
-			  
-			 <div> 
-				<a href="image/night city.jpg"><img src="image/night city.jpg" alt=""></a>
-			 </div>
-	
-	
-		</div>
-
-		<div class="filter">
-            <button>8k</button>
-			<button>4k</button>
-			<button>2k</button>
-			<button>1080p</button>
-			<button>720p</button>
-			<button>480p</button>
-		</div>
-
-
-</div>
-
-
-    <a href=""></a>
-
-
-
-<!-- html for footer-->
-   <footer class="footer">
-  	 <div class="container">
-  	 	<div class="row">
-  	 		<div class="footer-col">
-  	 			<h4>company</h4>
-  	 			<ul>
-  	 				<li><a href="#">about us</a></li>
-  	 				<li><a href="#">our services</a></li>
-  	 				<li><a href="#">privacy policy</a></li>
-  	 				<li><a href="#">affiliate program</a></li>
-  	 			</ul>
-  	 		</div>
-  	 		<div class="footer-col">
-  	 			<h4>get help</h4>
-  	 			<ul>
-  	 				<li><a href="#">FAQ</a></li>
-  	 				<li><a href="#">shipping</a></li>
-  	 				<li><a href="#">returns</a></li>
-  	 				<li><a href="#">order status</a></li>
-  	 				<li><a href="#">payment options</a></li>
-  	 			</ul>
-  	 		</div>
-  	 		<div class="footer-col">
-  	 			<h4>follow us</h4>
-  	 			<div class="social-links">
-  	 				<a href="#"><i class="fab fa-facebook-f"></i></a>
-  	 				<a href="#"><i class="fab fa-twitter"></i></a>
-  	 				<a href="#"><i class="fab fa-instagram"></i></a>
-  	 				<a href="#"><i class="fab fa-linkedin-in"></i></a>
-  	 			</div>
-  	 		</div>
-  	 	</div>
-  	 </div>
-  </footer>
-
+   <div class="big"> 
+	  <div class="wrapper">
+        <p>WallPics provides you</p>
+          <div class="words">
+            <span>Amazing</span>
+            <span>interesting</span>
+            <span>awesome</span>
+            <span>Quality</span>
+            <span>Wallpapers</span>
+          </div>
+      </div>
+	  <h1><a class="start-link" href="">Get Started with WallPics</a></h1>
+  </div>
 </body>
 </html>
