--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="css/home.css">
+    <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
 
@@ -57,7 +57,7 @@
             <span>Wallpapers</span>
           </div>
       </div>
-	  <h1><a class="start-link" href="">Get Started with WallPics</a></h1>
+	  <h1><a class="start-link" href="html/home page.html">Get Started with WallPics</a></h1>
   </div>
 </body>
 </html>
