--- a/html/log in.html
+++ b/html/log in.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Log in</title>
+    <title>Log into WallPics</title>
     <link rel="stylesheet" href="../css/log in.css">
 </head>
 <body>
         
     <div class="center">
-        <h1>Login</h1>
+        <h1>Log in</h1>
         <form method="post">
           <div class="txt_field">
             <input type="text" required>
