--- a/html/sign up.html
+++ b/html/sign up.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sign up</title>
+    <title>Sign up into WallPics</title>
     <link rel="stylesheet" href="../css/sign up.css">
 </head>
 <body>
@@ -44,7 +44,7 @@
             <label>Confirm Password</label>
           </div>
           
-          <a href="../index.html"><input type="submit" value="Signup"></a>
+          <a href="../index.html/#logo"><input type="submit" value="Signup"></a>
           <div class="signup_link">
             Already have an account. <a href="log in.html">Login</a>
           </div>
